Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41739

.toString() method of QGeoCoordinteClass incorrect behaviour

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0 RC
    • 5.2.1
    • Location
    • None
    • ubuntu 3.13.0-36-generic #63-Ubuntu SMP Wed Sep 3 21:30:07 UTC 2014 x86_64 x86_64 x86_64 GNU/Linux

      When you call the .toString() method, sometimes it returns an incorrect string.
      Example :
      --> 1 degree - 8 minutes - 0 seconds --> as double is 1,13333333333
      --> you create a QGeoCoordinate X( 1,13333333333, 0 )
      --> .toString() method returns [ 1ยบ 7' 60" ] ... ( 7' + 60" == 8' ) ...

      The strange thing is that this happens with certain values.
      I'fixed this by subclassing QGeoCoordinate and implementing my own toString() method.

        For Gerrit Dashboard: QTBUG-41739
        # Subject Branch Project Status CR V

            ablasche Alex Blasche
            gorgorito facundo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes