Fix QGeoCoordinate::toString() when rounding long/lat corner cases

Change-Id: I14da28acbd124e07da42fbf5efc3a501267f86f3
Task-number: QTBUG-41739
Reviewed-by: Lars Knoll <lars.knoll@digia.com>